@@ -1,3 +1,7 @@
+2014-06-30  Sebastian Huber  <sebastian.huber@embedded-brains.de>
+
+	* gcc.dg/typeof-2.c: New testcase.
+
 2014-06-30  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	* gcc.target/aarch64/vqdmulhh_lane_s16.c: New test.
